MDEV-35225 Bogus debug assertion failures in innodb.innodb-32k-crash

log_sort_flush_list(): Correct some debug assertions that had been added in
commit 0d175968d1181a0308ce6caccc2e4fbc972ca6c6 (MDEV-31354).
The writes of some blocks may be completed and the oldest_modification()
set to 1 at any time.

The bogus assertion failures led to occasional failures of the test
innodb.innodb-32k-crash.